# StochasticHydro

./: .gitignore  CMakeLists.txt  README  run.sh
scripts/: compute_jpx_time_correlator.py  plot_j2_animation.py  plot_jp_correlator.py  plot_jpx_time_correlator.py  plot_sanity_checks.py
src/: main.cpp
